Méthode majAthlete
Cette méthode permet de modifier les informations d'un athlète